; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_hash.c_mv_cesa_ahash_import.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_hash.c_mv_cesa_ahash_import.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { i32 }
%struct.crypto_ahash = type { i32 }
%struct.mv_cesa_ahash_req = type { i32, i32, i32, i32, i32 }

@CESA_SA_DESC_CFG_MID_FRAG = common dso_local global i32 0, align 4
@CESA_SA_DESC_CFG_FRAG_MSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ahash_request*, i8*, i32, i8*)* @mv_cesa_ahash_import to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv_cesa_ahash_import(%struct.ahash_request* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ahash_request*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.crypto_ahash*, align 8
  %11 = alloca %struct.mv_cesa_ahash_req*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.ahash_request* %0, %struct.ahash_request** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %16 = load %struct.ahash_request*, %struct.ahash_request** %6, align 8
  %17 = call %struct.crypto_ahash* @crypto_ahash_reqtfm(%struct.ahash_request* %16)
  store %struct.crypto_ahash* %17, %struct.crypto_ahash** %10, align 8
  %18 = load %struct.ahash_request*, %struct.ahash_request** %6, align 8
  %19 = call %struct.mv_cesa_ahash_req* @ahash_request_ctx(%struct.ahash_request* %18)
  store %struct.mv_cesa_ahash_req* %19, %struct.mv_cesa_ahash_req** %11, align 8
  %20 = load %struct.crypto_ahash*, %struct.crypto_ahash** %10, align 8
  %21 = call i32 @crypto_ahash_digestsize(%struct.crypto_ahash* %20)
  store i32 %21, i32* %12, align 4
  %22 = load %struct.ahash_request*, %struct.ahash_request** %6, align 8
  %23 = call i32 @crypto_ahash_init(%struct.ahash_request* %22)
  store i32 %23, i32* %15, align 4
  %24 = load i32, i32* %15, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i32, i32* %15, align 4
  store i32 %27, i32* %5, align 4
  br label %68

28:                                               ; preds = %4
  %29 = load %struct.crypto_ahash*, %struct.crypto_ahash** %10, align 8
  %30 = call i32 @crypto_ahash_blocksize(%struct.crypto_ahash* %29)
  store i32 %30, i32* %13, align 4
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* %13, align 4
  %33 = icmp uge i32 %31, %32
  br i1 %33, label %34, label %40

34:                                               ; preds = %28
  %35 = load %struct.mv_cesa_ahash_req*, %struct.mv_cesa_ahash_req** %11, align 8
  %36 = getelementptr inbounds %struct.mv_cesa_ahash_req, %struct.mv_cesa_ahash_req* %35, i32 0, i32 4
  %37 = load i32, i32* @CESA_SA_DESC_CFG_MID_FRAG, align 4
  %38 = load i32, i32* @CESA_SA_DESC_CFG_FRAG_MSK, align 4
  %39 = call i32 @mv_cesa_update_op_cfg(i32* %36, i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %34, %28
  %41 = load i32, i32* %8, align 4
  %42 = load %struct.mv_cesa_ahash_req*, %struct.mv_cesa_ahash_req** %11, align 8
  %43 = getelementptr inbounds %struct.mv_cesa_ahash_req, %struct.mv_cesa_ahash_req* %42, i32 0, i32 0
  store i32 %41, i32* %43, align 4
  %44 = load %struct.mv_cesa_ahash_req*, %struct.mv_cesa_ahash_req** %11, align 8
  %45 = getelementptr inbounds %struct.mv_cesa_ahash_req, %struct.mv_cesa_ahash_req* %44, i32 0, i32 3
  %46 = load i32, i32* %45, align 4
  %47 = load i8*, i8** %7, align 8
  %48 = load i32, i32* %12, align 4
  %49 = call i32 @memcpy(i32 %46, i8* %47, i32 %48)
  %50 = load %struct.mv_cesa_ahash_req*, %struct.mv_cesa_ahash_req** %11, align 8
  %51 = getelementptr inbounds %struct.mv_cesa_ahash_req, %struct.mv_cesa_ahash_req* %50, i32 0, i32 1
  store i32 0, i32* %51, align 4
  %52 = load i32, i32* %8, align 4
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @do_div(i32 %52, i32 %53)
  store i32 %54, i32* %14, align 4
  %55 = load i32, i32* %14, align 4
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %58, label %57

57:                                               ; preds = %40
  store i32 0, i32* %5, align 4
  br label %68

58:                                               ; preds = %40
  %59 = load %struct.mv_cesa_ahash_req*, %struct.mv_cesa_ahash_req** %11, align 8
  %60 = getelementptr inbounds %struct.mv_cesa_ahash_req, %struct.mv_cesa_ahash_req* %59, i32 0, i32 2
  %61 = load i32, i32* %60, align 4
  %62 = load i8*, i8** %9, align 8
  %63 = load i32, i32* %14, align 4
  %64 = call i32 @memcpy(i32 %61, i8* %62, i32 %63)
  %65 = load i32, i32* %14, align 4
  %66 = load %struct.mv_cesa_ahash_req*, %struct.mv_cesa_ahash_req** %11, align 8
  %67 = getelementptr inbounds %struct.mv_cesa_ahash_req, %struct.mv_cesa_ahash_req* %66, i32 0, i32 1
  store i32 %65, i32* %67, align 4
  store i32 0, i32* %5, align 4
  br label %68

68:                                               ; preds = %58, %57, %26
  %69 = load i32, i32* %5, align 4
  ret i32 %69
}

declare dso_local %struct.crypto_ahash* @crypto_ahash_reqtfm(%struct.ahash_request*) #1

declare dso_local %struct.mv_cesa_ahash_req* @ahash_request_ctx(%struct.ahash_request*) #1

declare dso_local i32 @crypto_ahash_digestsize(%struct.crypto_ahash*) #1

declare dso_local i32 @crypto_ahash_init(%struct.ahash_request*) #1

declare dso_local i32 @crypto_ahash_blocksize(%struct.crypto_ahash*) #1

declare dso_local i32 @mv_cesa_update_op_cfg(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @do_div(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
